# HeatMapping

./: .gitignore  Cargo.toml  JUMP_FILL_IDEA.md  README.md  TODO.md
docs/: JUMP_FLOOD_HEATMAP.md
src/: app.rs  dijkstra.rs  gtfs.rs  main.rs  parse.rs  render_state.rs  shader.rs  structs.rs  utils.rs
src/shaders/: arrival_minmax.wgsl  jfa_step.wgsl  render.wgsl  seed_scatter.wgsl  seed_texturify.wgsl  shader.wgsl  stop_points.wgsl
