[package]
name = "HeatMapping"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
exitfailure = "0.5.1"
image = "0.25.9"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = { version = "28.0", features = ["spirv"] }
pollster = "0.3"
futures-intrusive = "0.4"
bytemuck = "1.25.0"
postcard = { version = "1.1.3", features = ["alloc"] }
